# tiny-sqlite-rust

./: .gitignore  Cargo.toml
src/: main.rs
src/cli/: header.rs  mod.rs
src/db/: cursor.rs  error.rs  mod.rs  pager.rs  table.rs  tree.rs
src/service/: executor.rs  meta_command.rs  mod.rs  prepare_statement.rs
src/util/: mod.rs
