[package]
name = "tiny-sqlite-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
libc = "0.2.126"
memoffset = "0.6"